unpackaged/main/default/objects/Dropbox_Sign_Event__c/Dropbox_Sign_Event__c.object-meta.xml
<CustomObject>
    <label>Dropbox Sign Event</label>
    <nameField>
        <displayFormat>DBE-{0000}</displayFormat>
        <label>Dropbox Sign Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dropbox Sign Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>