unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/Dropbox_Sign_Request__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_Sign_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dropbox Sign Request</label>
    <referenceTo>Dropbox_Sign_Request__c</referenceTo>
    <relationshipLabel>Dropbox Sign EventS</relationshipLabel>
    <relationshipName>Dropbox_Sign_EventS</relationshipName>
    <type>Lookup</type>
</CustomField>