unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/Dropbox_Sign_Signature__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_Sign_Signature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dropbox Sign Signature</label>
    <referenceTo>Dropbox_Sign_Signature__c</referenceTo>
    <relationshipLabel>Dropbox Sign Events</relationshipLabel>
    <relationshipName>Dropbox_Sign_Events</relationshipName>
    <type>Lookup</type>
</CustomField>