unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <formula>DATETIMEVALUE(&quot;1970-01-01 00:00:00&quot;) + (VALUE(Event_Time__c) / 86400)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>