unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/Event_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Event_Metadata__c</fullName>
    <label>Event Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>