unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <label>Event Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>