unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/Files_Url__c.field-meta.xml
<CustomField>
    <fullName>Files_Url__c</fullName>
    <label>Files Url</label>
    <type>Url</type>
</CustomField>