unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/Final_Copy_URI__c.field-meta.xml
<CustomField>
    <fullName>Final_Copy_URI__c</fullName>
    <label>Final Copy URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>