unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/Full_Payload__c.field-meta.xml
<CustomField>
    <fullName>Full_Payload__c</fullName>
    <label>Full Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>