unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/FX_Intake_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>FX_Intake_Display_Name__c</fullName>
    <formula>Intake__r.litify_pm__Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Display Name</label>
    <type>Text</type>
</CustomField>