unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/Get_File__c.field-meta.xml
<CustomField>
    <fullName>Get_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get File</label>
    <type>Checkbox</type>
</CustomField>