unpackaged/main/default/objects/Dropbox_Sign_Event__c/fields/Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request__c</fullName>
    <label>Signature Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>