unpackaged/main/default/objects/Dropbox_Sign_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Event_Time__c</columns>
    <columns>Signature_Request__c</columns>
    <columns>Event_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>