unpackaged/main/default/objects/Dropbox_Sign_Event__c/listViews/Dropbox_Sign_Events_Today.listView-meta.xml
<ListView>
    <fullName>Dropbox_Sign_Events_Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Type__c</columns>
    <columns>Signature_Request__c</columns>
    <columns>Intake__c</columns>
    <columns>FX_Intake_Display_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Dropbox Sign Events Today</label>
</ListView>